# gdext-rust-tutorials

./: README.md
character-2d-body/godot/: main_scene.tscn  rust.gdextension
character-2d-body/rust/src/: lib.rs  player.rs
collision-detection/godot/: main_scene.tscn
collision-detection/rust/src/: player.rs
dynamic-children/godot/: main_scene.tscn
dynamic-children/rust/src/: custom_grid.rs  lib.rs
ecs/godot/: entry_scene.tscn  game_scene.tscn  project.godot
ecs/rust/: Cargo.toml
ecs/rust/src/: lib.rs
ecs/rust/src/ecs/: ecs_task.rs  mod.rs
ecs/rust/src/ecs/resources/: dispatcher_resource.rs  mod.rs
ecs/rust/src/ecs/schedulers/: application_scheduler.rs  mod.rs
ecs/rust/src/ecs/systems/: application_system.rs  mod.rs
ecs/rust/src/nodes/: ecs_node.rs  game_node.rs  main_menu_node.rs  mod.rs  player.rs
ecs/rust/src/utils/: ecs_utils.rs  mod.rs
getting-started/godot/: icon.svg.import  main_scene.tscn  project.godot
getting-started/rust/: Cargo.toml
getting-started/rust/src/: player.rs
mouse-input-handling/rust/src/: player.rs
multiple-scenes/godot/: game_scene.tscn  main_menu.tscn
multiple-scenes/rust/src/: lib.rs  main_menu_node.rs
signals/godot/: entry_scene.tscn
signals/rust/src/: entry_node.rs  game_node.rs  lib.rs  main_menu_node.rs  player.rs
singleton/godot/: project.godot  rust.gdextension
singleton/rust/: Cargo.toml
singleton/rust/src/: godot_singleton.rs  lib.rs  player.rs  singleton.rs
steamdeck-handling/: .gitignore
steamdeck-handling/rust/src/: player.rs
