[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext.git", branch = "master"}
bevy = "0.13.2"
