[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext.git", rev = "4c7db4833a932c1ff647ac841036f3e631ec2877"}
